--- a/config/model_config.yaml
+++ b/config/model_config.yaml
@@ -14,12 +14,12 @@ random_forest:
 
 gradient_boosting:
   param_grid:
-    n_estimators: [50, 100, 200]
-    max_depth: [3, 4, 5, 6]
-    learning_rate: [0.01, 0.05, 0.1]
-    min_samples_split: [10, 20, 30]
-    min_samples_leaf: [5, 10, 15]
-    subsample: [0.7, 0.8, 0.9]
-    max_features: ["sqrt", "log2", null]
+    n_estimators: [20, 50]
+    max_depth: [3, 5]
+    learning_rate: [0.01, 0.1]
+    min_samples_split: [5, 10]
+    min_samples_leaf: [5, 10]
+    subsample: [0.7, 0.9]
+    max_features: ["sqrt"]
   cv_splits: 5
   random_state: 42
